
[TestPods/test-single-pod - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-single-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-single-pod
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-single-pod
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-multiple-pods - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-multiple-pods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-multiple-pods
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-multiple-pods
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}
/-/-/-/
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-2-deployment
  namespace: test-multiple-pods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-2
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-2
        generated-by: ctfv2
      namespace: test-multiple-pods
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-2-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-2-svc
  namespace: test-multiple-pods
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-2
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-custom-resources - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-custom-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-custom-resources
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-custom-resources
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-configmaps - 1]
apiVersion: v1
data:
  config.toml: test
  config2.toml: test
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: test-pod-1-configmap
  namespace: test-configmaps
/-/-/-/
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-configmaps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-configmaps
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /config.toml
          name: test-pod-1-configmap-volume-0
          subPath: config.toml
        - mountPath: /config2.toml
          name: test-pod-1-configmap-volume-1
          subPath: config2.toml
      volumes:
      - configMap:
          items:
          - key: config.toml
            path: config.toml
          name: test-pod-1-configmap
        name: test-pod-1-configmap-volume-0
      - configMap:
          items:
          - key: config2.toml
            path: config2.toml
          name: test-pod-1-configmap
        name: test-pod-1-configmap-volume-1
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-configmaps
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-secrets - 1]
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: null
  name: test-pod-1-secret
  namespace: test-secrets
stringData:
  secret.toml: test
  secret2.toml: test
/-/-/-/
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-secrets
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /secret.toml
          name: test-pod-1-secret-volume-0
          subPath: secret.toml
        - mountPath: /secret2.toml
          name: test-pod-1-secret-volume-1
          subPath: secret2.toml
      volumes:
      - name: test-pod-1-secret-volume-0
        secret:
          items:
          - key: secret.toml
            path: secret.toml
          secretName: test-pod-1-secret
      - name: test-pod-1-secret-volume-1
        secret:
          items:
          - key: secret2.toml
            path: secret2.toml
          secretName: test-pod-1-secret
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-secrets
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-instances - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-instances
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-instances
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-instances
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-volumes - 1]
apiVersion: v1
kind: ConfigMap
metadata:
  name: pg-x-configmap
  namespace: test-volumes
data:
  init.sql: |
    
    ALTER USER chainlink WITH SUPERUSER;
/-/-/-/
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-x-statefulset
  namespace: test-volumes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-x
      generated-by: pods
  serviceName: pg-x-svc
  template:
    metadata:
      annotations: {}
      labels:
        app: pg-x
        generated-by: pods
      name: pg-x-pp
      namespace: test-volumes
    spec:
      containers:
        - env:
            - name: POSTGRES_USER
              value: chainlink
            - name: POSTGRES_PASSWORD
              value: thispasswordislongenough
            - name: POSTGRES_DB
              value: chainlink
          image: postgres:15
          name: pg-x-container
          ports:
            - containerPort: 5432
              name: port-0
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          securityContext:
            runAsGroup: 999
            runAsUser: 999
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: pg-x-configmap-volume-0
              subPath: init.sql
      securityContext:
        fsGroup: 999
      volumes:
        - configMap:
            items:
              - key: init.sql
                path: init.sql
            name: pg-x-configmap
          name: pg-x-configmap-volume-0
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: gp3
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  name: pg-x-svc
  namespace: test-volumes
spec:
  ports:
    - name: port-0
      port: 5432
      targetPort: 5432
  selector:
    app: pg-x
    generated-by: pods
  type: LoadBalancer

---

[TestPods/test-services - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: test-pod-1-deployment
  namespace: test-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-1
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-pod-1
        generated-by: ctfv2
      namespace: test-services
    spec:
      containers:
      - image: nginx:latest
        name: test-pod-1-container
        ports:
        - containerPort: 80
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: test-pod-1-svc
  namespace: test-services
spec:
  ports:
  - name: port-0
    port: 80
    targetPort: 80
  selector:
    app: test-pod-1
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---

[TestPods/test-command - 1]
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: anvil-deployment
  namespace: test-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anvil
      chain.link/component: cl
      generated-by: ctfv2
  strategy: {}
  template:
    metadata:
      annotations:
        custom-annotation: custom
      creationTimestamp: null
      labels:
        app: anvil
        chain.link/component: cl
        generated-by: ctfv2
      namespace: test-command
    spec:
      containers:
      - command:
        - anvil
        - --host=0.0.0.0
        - -b=1
        image: ghcr.io/foundry-rs/foundry
        name: anvil-container
        ports:
        - containerPort: 8545
          name: port-0
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
/-/-/-/
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: anvil-svc
  namespace: test-command
spec:
  ports:
  - name: port-0
    port: 8545
    targetPort: 8545
  selector:
    app: anvil
    chain.link/component: cl
    generated-by: ctfv2
  type: LoadBalancer
status:
  loadBalancer: {}

---
